<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_DefGridSettings" Id="{f2f32c1f-d29d-4418-ae48-cbd209239185}">
    <Declaration><![CDATA[TYPE ST_DefGridSettings :
STRUCT
  nGridSizeX    : UDINT;    // grid size in X (grid cols), based on ImageDepth
  nGridSizeY    : UDINT;    // grid size in Y (grid rows), based on ImageWidth & ImageOffsetY
  nGridPitchX   : UDINT;    // distance between grid points x [px]
  nGridPitchY   : UDINT;    // distance between grid points y [px]
  nGridPoints   : UDINT;    // number of grid points in total
  nGridImageOffsetY : UDINT;  // offset of the image from 0 reference of grid [px]
  eDeformationType  : E_DeformationType; // grid generation type
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>